<resources>
    <string name="app_name">Rishta Ahmadiyya</string>
    <string name="startup_button_login">Log in</string>
    <string name="startup_button_signup">Sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign up</string>
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_gender">I am a</string>
    <string name="hint_man">Man</string>
    <string name="hint_woman">Woman</string>
    <string name="hint_preferred_gender">Looking for a</string>
    <string name="button_sign_out">Sign out</string>
    <string name="button_apply">Apply</string>
    <string name="error_profile_incomplete">Please complete your profile</string>
    <string name="no_available_users">No available users at the moment. Make sure your profile is complete and check back later.</string>
    <string name="send_button_text">Send</string>
    <string name="hint_message">Message</string>

    <string name="country_prompt">Choose a country</string>
    <string name="country_hint">Country</string>
    <string name="hint_noMatch">When other users swipe right on your profile, you can chat with them here.</string>
    <string name="bio_hint">Write an introduction for yourself. Remember to tap Apply to save changes.</string>
    <string-array name="country_arrays">
        <item>Select Country</item>
        <item>Canada</item>
        <item>Pakistan</item>
        <item>UK</item>
        <item>USA</item>
        <item>Other</item>
    </string-array>



    <string name="action_settings">Settings</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CHAT_STATUS">CHATTING WITH:</string>
</resources>