<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/photoIV"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_width"
                android:paddingBottom="8dp"
                android:src="@drawable/default_pic" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/photoIV"
                android:paddingBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name" />
            </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTIL"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nameTIL"
                    android:paddingBottom="8dp">

                    <Spinner
                        android:id="@+id/countrySP"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:entries="@array/country_arrays"
                        android:hint="ABC" />

                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ageTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTIL"
                android:paddingBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ageET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_age" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/radio1Layout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/ageTIL"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/genderTV"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/standard_height"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/hint_gender" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/standard_height"
                    android:layout_weight="2"
                    android:paddingBottom="8dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMan1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_man"/>

                    <RadioButton
                        android:id="@+id/radioWoman1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_woman"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/radio2Layout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/radio1Layout"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userLocationTV"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/standard_height"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:text="Looking for Rishta in " />

                <Spinner
                    android:id="@+id/preferredCountrySP"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/country_arrays"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ageLayout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/radio2Layout"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bioET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bio_hint" />
            </LinearLayout>

            <Button
                android:id="@+id/applyButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/ageLayout"
                style="@style/StandardButton"
                android:text="@string/button_apply"/>

            <Button
                android:id="@+id/signoutButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/applyButton"
                style="@style/StandardButtonGrey"
                android:text="@string/button_sign_out"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#aaaaaaaa"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>